@@ -181,7 +181,7 @@ div#column-one,
 .editsection,
 .toctoggle,
 div#f-poweredbyico,
-div#f-copyrightico,
+div#f-opensourceexcellenceico,
 ul#f-list,
 div#html-validator,
 li#pt-logout,
